manager/templates/default/css/index.css
/* ... */
.x-grid3-row-expanded .x-grid3-row-expander {
    background-position: -32px 2px;
}

.grid-row-inactive {
    color: #999 !important;
}

/* action buttons bar */
#modAB {
    position: fixed;
    top: 8em;
    right: 2em;
    text-align: right;
    z-index: 12;
}
#modx-action-buttons {
    background: transparent !important;
}
#modx-action-buttons .x-toolbar-left {
    width: auto !important;
}

/* top bar */
#modx-topbar {
    height: 3em;
    background: #373737 url("../images/restyle/header_background.jpg") repeat-x;

    color: white;
    vertical-align: middle;
    border-bottom:1px solid #94BF4C;
    background-repeat: repeat-x;
}

#modx-site-name {
    padding: .3em 0 0 1em;
}

.modx-version {
    display: block;
    clear: left;
    color: #888;
    font-size: 10px;
    line-height: 8px;
    font-style: italic;
    margin: 0;
}

#modx-logo {
    float: right;
    margin: 7px 11px 0 0;
}
#modx-logo img {
    width: 94px;
    height: 25px;
    vertical-align: middle;
}


/* 2nd row, navbar */
#modx-navbar {
    background-color: #4E4E4E;
    border-top: 1px solid #1E1E1E;
    border-bottom: 1px solid #1E1E1E;
    height: 45px;
    position: relative;
    text-shadow:1px -1px 0 #1f1f1f;
    z-index: 9995;
}
#modx-login-user {
    font-weight: bold;
    text-decoration: none;
    color: #eee;
}
#rightlogin {
    -moz-border-radius: 3px;
    -webkit-border-radius: 3px;
    border-radius: 3px;
    border: 1px solid #4E4E4E;
    bottom: 10px;
    color: #AAAAAA;
    height: 26px;
    line-height: 26px;
    position: absolute;
    right: 12px;
    z-index: 1;
    max-width: 350px;
}
#rightlogin span {
    -moz-border-radius: 3px;
    -webkit-border-radius: 3px;
    border-radius: 3px;
    background-color: #363636;
    border: 1px solid #1F1F1F;
    float: left;
    height: 26px;
    padding: 0 0 0 12px;
}
#rightlogin a.modx-logout {
    -moz-border-radius-topright: 3px;
    -moz-border-radius-bottomright: 3px;
    -webkit-border-top-right-radius: 3px;
    -webkit-border-bottom-right-radius: 3px;
    border-top-right-radius: 3px;
    border-bottom-right-radius: 3px;
    background-color: #3e3e3e;
    border: 1px solid #4e4e4e;
    color: #DDDDDD;
    display: block;
    float: right;
    height: 24px;
    margin: 0 0 1px 7px;
    padding: 0 12px;
    text-decoration: none;
    text-shadow: 1px -1px 0 #5e5e5e;
}
#rightlogin a.modx-logout:hover {
    background-color: #6e9b38;
    border-color: #88BF47;
    color: #fff;
}

/* panel stylings */
.modx-page-header, .modx-page-header div {
    background-color: transparent !important;
}
#modx-content form.x-panel-body {
    background-color: transparent !important;
}

.modx-form p {
    padding-bottom: 1em;
}

#modx-mainpanel{
    margin:0;
    position:relative;
}

/* news articles */
.news_article {
    padding-bottom: 3em;
}
.news_article a {
    color: #535d6c;
    text-decoration: none;
}
.news_article a:hover {
    color: #90b1b9;
}
.news_article .date_stamp {
    float: right;
    font-style: italic;
}

/* tables */
table.classy {
    border-spacing: 0;
    border-right: 3px solid #5F5F5F;
    border-left: 3px solid #5F5F5F;
    border-bottom: 3px solid #5F5F5F;
    -moz-border-radius-bottomleft: 3px;
    -moz-border-radius-bottomright: 3px;
    -moz-border-radius-topleft: 3px;
    -moz-border-radius-topright: 3px;
    border-bottom-left-radius: 3px;
    border-bottom-right-radius: 3px;
    border-top-left-radius: 3px;
    border-top-right-radius: 3px;
}
table.classy th, table.classy td {
    line-height: 1.4em;
    padding: .5em .5em .3em 1em;
    text-decoration: none;
}

table.classy th {
    color: #000000;
    background-color: #d9e3f2;
}

table.classy td {
    /*border-right: 1px solid #C1DAD7;*/
    color: #000000;
    font-size: 11px;
}

table.classy tbody th {
    vertical-align: top;
    background-color: #FFFFFF;
    font-size: 11px;
}
table.classy thead th {
    background-color: #5F5F5F;
    color: #FFFFFF;
    text-transform: uppercase;
    font-size: 11px;
    font-weight: bold;
    padding-top: 10px;
    padding-bottom: 8px;
    text-shadow: 1px -1px 0 #3F3F3F;
}

table.classy tr.odd td {
    background: #e8eff8;
    color: #7c735c;
}

/* tv table */
#modx-tv-tabs tr.alt .modx-tv-td, #modx-tv-tabs tr.alt .modx-tv-th {
    background-color: #f0f0f0;
}

#modx-tv-tabs .modx-tv-table {
    border: 0;
}
#modx-tv-tabs .modx-tv-th { font-weight: bold; }
#modx-tv-tabs .modx-tv-th, #modx-tv-tabs .modx-tv-td {
    padding: 5px;
    vertical-align: top;
    border-bottom: 1px solid #ddd;
}
#modx-tv-tabs .modx-tv-td .x-panel-body {
    background-color: transparent !important;
}
#modx-tv-tabs .tvtag {
    font-size: .8em;
    font-weight: normal;
    color: #666;
}
.aleft { text-align: left; }
.aright { text-align: right; }
.right { float: right; }
.left { float: left; }

/* browser */
.modx-pb-view-ct {
    background: white;
    font: 11px Arial, Helvetica, sans-serif;
}
.modx-pb-thumb{
    background: #dddddd;
    width: 80px;
    height: 60px;
    padding: 3px;
}
.modx-pb-thumb img{
    height: 60px;
    width: 80px;
}
.modx-pb-thumb-wrap {
    float: left;
    margin: 4px;
    margin-right: 0;
    padding: 5px;
}
.modx-pb-thumb-wrap span{
    display: block;
    overflow: hidden;
    text-align: center;
}
.modx-pb-view-ct .x-view-over{
    border:1px solid #dddddd;
    padding: 4px;
}
.modx-pb-view-ct .x-view-selected{
    background: #DFEDFF;
    border: 1px solid #6593cf;
    padding: 4px;
}
.modx-pb-view-ct .x-view-selected .thumb{
    background: transparent;
}
.modx-pb-view-ct .x-view-selected span{
    color: #1A4D8F;
}
.modx-pb-view-ct .loading-indicator {
    font-size: 11px;
    background-repeat: no-repeat;
    background-position: left;
    padding-left: 20px;
    margin: 10px;
}

.modx-pb-detail-thumb {
    margin-top: 5px;
    text-align: center;
    cursor: pointer;
}
/* ... */

